--- a/static/.htaccess
+++ b/static/.htaccess
@@ -4,3 +4,11 @@ RewriteRule ^post/(.*)$ /posts/$1 [R=301,L]
 
 # Redirect /archives to /posts/
 RewriteRule ^archives/?$ /posts/ [R=301,L]
+
+# Handle old slug patterns with date prefixes
+# Pattern: /posts/2025-03-17-slug-name -> /posts/slug-name
+RewriteRule ^posts/2025-03-17-(.*)$ /posts/$1 [R=301,L]
+RewriteRule ^posts/202[0-9]-[0-9]{2}-[0-9]{2}-(.*)$ /posts/$1 [R=301,L]
+
+# Handle other common old patterns
+RewriteRule ^posts/post-(.*)$ /posts/$1 [R=301,L]
