--- a/.github/workflows/notion-hugo-deploy.yml
+++ b/.github/workflows/notion-hugo-deploy.yml
@@ -1,6 +1,10 @@
 name: Notion → Hugo → GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
+
   schedule:
     - cron: '0 */1 * * *'  # 매시간 실행
   workflow_dispatch:
@@ -22,9 +26,8 @@ env:
   STATE_FILE: .notion-hugo-state.json
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -124,6 +127,13 @@ jobs:
         with:
           path: ./public
 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
